<resources>
    <string name="app_name">Meetup</string>
    <string name="action_settings">Settings</string>
    <string name="bio_hint">Write a short bio...</string>
    <string name="button_send">Send</string>
    <string name="display_name_hint">Display Name</string>
    <string name="edit_message">Enter a message</string>
    <string name="facebook_app_id">558853487615148</string>
    <string name="parse_app_id">3wRj6NESp19ulPCGv2G6DrklkDZ27kGrJrcIRfXb</string>
    <string name="parse_client_key">iLBZqJSSJcz75PCnGfuYJuxEIhum3gqfLPZCFwvS</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_profile"><Profile></Profile></string>
    <string name="title_activity_propose">Propose Activity</string>
    <string name="title_activity_swipe">Swipe Activity</string>
    <string name="title_activity_search">What to do...?</string>
    <string-array name="categories_array">
        <item>@string/outdoor</item>
        <item>@string/movies</item>
        <item>@string/shopping</item>
        <item>@string/sports</item>
        <item>@string/music</item>
        <item>@string/dining</item>
        <item>@string/clubbing</item>
    </string-array>
    <string name="clubbing">Clubbing</string>
    <string name="dining">Dining</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="outdoor">Outdoor</string>
    <string name="shopping">Shopping</string>
    <string name="sports">Sports</string>
    <string name="noCards">You have no more nearby activities! Please try again later, or post your own!</string>

</resources>
