<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.tartanhacks.meetup.SearchActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="Submit"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:hint="Search"/>
    <CheckBox android:id="@+id/checkbox_outdoor"
        android:layout_marginTop="170dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outdoor"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_movies"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_shopping"
        android:layout_marginTop="230dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_sports"
        android:layout_marginTop="260dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_music"
        android:layout_marginTop="290dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_dining"
        android:layout_marginTop="320dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dining"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_clubbing"
        android:layout_marginTop="350dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clubbing"
        android:onClick="onCheckboxClicked"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_search" />

</android.support.design.widget.CoordinatorLayout>
